a11y: fix contrast for destructive text in all color theme

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -18,7 +18,7 @@
 		--muted-foreground: 0 0% 45.1%;
 		--accent: 0 0% 96.1%;
 		--accent-foreground: 0 0% 9%;
-		--destructive: 0 84.2% 45%;
+		--destructive: 0 84.2% 30.6%;
 		--destructive-foreground: 0 0% 98%;
 		--border: 0 0% 89.8%;
 		--input: 0 0% 89.8%;
@@ -46,7 +46,7 @@
 		--muted-foreground: 0 0% 63.9%;
 		--accent: 0 0% 14.9%;
 		--accent-foreground: 0 0% 98%;
-		--destructive: 0 62.8% 60%;
+		--destructive: 0 62.8% 60.2%;
 		--destructive-foreground: 0 0% 98%;
 		--border: 0 0% 14.9%;
 		--input: 0 0% 14.9%;
