--- a/src/assets/css/themes/blue.css
+++ b/src/assets/css/themes/blue.css
@@ -23,7 +23,7 @@
 	--accent: 210 40% 96.1%;
 	--accent-foreground: 222.2 47.4% 11.2%;
 
-	--destructive: 0 84.2% 60.2%;
+	--destructive: 0 84.2% 30.6%;
 	--destructive-foreground: 210 40% 98%;
 
 	--ring: 221.2 83.2% 53.3%;
@@ -56,7 +56,7 @@
 	--accent: 217.2 32.6% 17.5%;
 	--accent-foreground: 210 40% 98%;
 
-	--destructive: 0 62.8% 30.6%;
+	--destructive: 0 62.8% 60.2%;
 	--destructive-foreground: 210 40% 98%;
 
 	--ring: 224.3 76.3% 48%;
