--- a/src/assets/css/themes/green.css
+++ b/src/assets/css/themes/green.css
@@ -23,7 +23,7 @@
 	--accent: 240 4.8% 95.9%;
 	--accent-foreground: 240 5.9% 10%;
 
-	--destructive: 0 84.2% 60.2%;
+	--destructive: 0 84.2% 30.6%;
 	--destructive-foreground: 0 0% 98%;
 
 	--ring: 142.1 76.2% 36.3%;
@@ -56,7 +56,7 @@
 	--accent: 12 6.5% 15.1%;
 	--accent-foreground: 0 0% 98%;
 
-	--destructive: 0 62.8% 30.6%;
+	--destructive: 0 62.8% 60.2%;
 	--destructive-foreground: 0 85.7% 97.3%;
 
 	--ring: 142.4 71.8% 29.2%;
