--- a/src/assets/css/themes/orange.css
+++ b/src/assets/css/themes/orange.css
@@ -23,7 +23,7 @@
 	--accent: 60 4.8% 95.9%;
 	--accent-foreground: 24 9.8% 10%;
 
-	--destructive: 0 84.2% 60.2%;
+	--destructive: 0 84.2% 30.6%;
 	--destructive-foreground: 60 9.1% 97.8%;
 
 	--ring: 24.6 95% 53.1%;
@@ -56,7 +56,7 @@
 	--accent: 12 6.5% 15.1%;
 	--accent-foreground: 60 9.1% 97.8%;
 
-	--destructive: 0 72.2% 50.6%;
+	--destructive: 0 72.2% 60.2%;
 	--destructive-foreground: 60 9.1% 97.8%;
 
 	--ring: 20.5 90.2% 48.2%;
