--- a/src/assets/css/themes/violet.css
+++ b/src/assets/css/themes/violet.css
@@ -23,7 +23,7 @@
 	--accent: 220 14.3% 95.9%;
 	--accent-foreground: 220.9 39.3% 11%;
 
-	--destructive: 0 84.2% 60.2%;
+	--destructive: 0 84.2% 30.6%;
 	--destructive-foreground: 210 20% 98%;
 
 	--ring: 262.1 83.3% 57.8%;
@@ -56,7 +56,7 @@
 	--accent: 215 27.9% 16.9%;
 	--accent-foreground: 210 20% 98%;
 
-	--destructive: 0 62.8% 30.6%;
+	--destructive: 0 62.8% 60.2%;
 	--destructive-foreground: 210 20% 98%;
 
 	--ring: 263.4 70% 50.4%;
