--- a/src/assets/css/themes/zinc.css
+++ b/src/assets/css/themes/zinc.css
@@ -23,7 +23,7 @@
 	--accent: 240 4.8% 95.9%;
 	--accent-foreground: 240 5.9% 10%;
 
-	--destructive: 0 84.2% 60.2%;
+	--destructive: 0 84.2% 30.6%;
 	--destructive-foreground: 0 0% 98%;
 
 	--ring: 240 5.9% 10%;
@@ -56,7 +56,7 @@
 	--accent: 240 3.7% 15.9%;
 	--accent-foreground: 0 0% 98%;
 
-	--destructive: 0 62.8% 30.6%;
+	--destructive: 0 62.8% 60.2%;
 	--destructive-foreground: 0 0% 98%;
 
 	--ring: 240 4.9% 83.9%;
